wallet_core/wallet_common/wallet_common_macros/tests/handle_error_category/fail_on_trait.stderr
error: attribute macro `handle_error_category` not supported here
 --> tests/handle_error_category/fail_on_trait.rs:4:1
  |
4 | trait Foo {}
  | ^^^^^
